# r2_gaussian

./: .clang-format  .gitignore  .gitmodules  initialize_pcd.py  preprocess.py  pyproject.toml  train.py
r2_gaussian/arguments/: __init__.py
r2_gaussian/dataset/: __init__.py  dataset_readers.py
r2_gaussian/gaussian/: __init__.py  gaussian_model.py  render_query.py
r2_gaussian/submodules/simple-knn/: CMakeLists.txt  ext.cpp  pyproject.toml  setup.py  simple_knn.cu  simple_knn.h  spatial.cu  spatial.h
r2_gaussian/submodules/xray-gaussian-rasterization-voxelization/: ext.cpp  pyproject.toml  rasterize_points.cu  rasterize_points.h  utility.h  voxelize_points.cu  voxelize_points.h
r2_gaussian/submodules/xray-gaussian-rasterization-voxelization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
r2_gaussian/submodules/xray-gaussian-rasterization-voxelization/cuda_voxelizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  voxelizer.h  voxelizer_impl.cu  voxelizer_impl.h
r2_gaussian/submodules/xray-gaussian-rasterization-voxelization/xray_gaussian_rasterization_voxelization/: __init__.py  rasterization.py  voxelization.py
r2_gaussian/utils/: argument_utils.py
