[project]
name = "r2_gaussian"
version = "1.0.0"
description = "Rectifying Radiative Gaussian Splatting for Tomographic Reconstruction"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license-files = ["LICENSE.md"]
dependencies = [
  "cython>=3.1.4",
  "h5py>=3.14.0",
  "imagecodecs>=2025.8.2",
  "matplotlib>=3.10.6",
  "mkl>=2025.2.0",
  "numpy>=2.3.3",
  "omegaconf>=2.3.0",
  "open3d>=0.19.0",
  "opencv-python>=4.11.0.86",
  "plyfile>=1.1.2",
  "pydicom>=3.0.1",
  "pynrrd>=1.1.3",
  "pyvista>=0.46.3",
  "pyyaml>=6.0.2",
  "scikit-image>=0.25.2",
  "setuptools>=80.9.0",
  "simpleitk>=2.5.2",
  "tensorboard>=2.20.0",
  "tifffile>=2025.9.20",
  "torch (>=2.6.0,<2.7.0)",
  "torchvision (>=0.21.0,<0.22.0)",
]

[project.optional-dependencies]
build = ["pytigre", "simple-knn", "xray-gaussian-rasterization-voxelization"]

[dependency-groups]
dev = [
  "flake8-pyproject>=1.2.3",
  "ipython>=9.5.0",
  "mypy>=1.17.1",
  "ruff>=0.12.9",
]

[tool.uv]
no-build-isolation-package = [
  "pytigre",
  "simple-knn",
  "xray-gaussian-rasterization-voxelization",
]

[tool.uv.sources]
r2_gaussian = { workspace = true }
torch = [
  { marker = "sys_platform == 'win32'", index = "pytorch-cu124" },
  { marker = "sys_platform == 'linux'", index = "pytorch-cu124" },
  { marker = "sys_platform == 'darwin'", index = "pytorch-cpu" },
]

torchvision = [
  { marker = "sys_platform == 'win32'", index = "pytorch-cu124" },
  { marker = "sys_platform == 'linux'", index = "pytorch-cu124" },
  { marker = "sys_platform == 'darwin'", index = "pytorch-cpu" },
]

pytigre = { path = "r2_gaussian/submodules/tigre", editable = true }
simple-knn = { path = "r2_gaussian/submodules/simple-knn", editable = true }
xray-gaussian-rasterization-voxelization = { path = "r2_gaussian/submodules/xray-gaussian-rasterization-voxelization", editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true

[tool.mypy]
python_version = "3.11"
follow_imports = "silent"
plugins = ["numpy.typing.mypy_plugin"]
disallow_any_generics = true
strict_optional = true
check_untyped_defs = true
allow_redefinition = true

[tool.flake8]
max-line-length = 120
ignore = "Q000,E127,E203,E402,W503,W504"
